--- a/index.html
+++ b/index.html
@@ -54,13 +54,12 @@
       </a>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
-      <nav id="navbar" class="navbar" style="display: none;">
+      <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="projects.html">Our Clients</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#hero" class="active">Home</a></li>
+          <li><a href="#constructions">Catalog</a></li>
+          <li><a href="#projects">Clients</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -1337,7 +1336,7 @@ problems.
       </div>
     </div>
 
-    <div class="footer-legal text-center position-relative">
+    <div id="contact" class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
           &copy; Copyright <strong><span>NOBEL</span></strong>. All Rights Reserved
